# gradoptics

./: .readthedocs.yml  .travis.yml  CHANGELOG.md  CMDS.md  Dockerfile  LICENSE  README.md  build_docker.sh  pyproject.toml  requirements.txt  setup.py
docker/: Docker.ub18.04-cuda10.2-torch1.7-jax1.64  Docker.ub18.04-cuda10.2-torch1.8-jax1.64
docs/: api.rst  citations.rst  conf.py  diffoptics.distributions.AtomCloud.rst  diffoptics.distributions.BaseDistribution.rst  diffoptics.distributions.GaussianDistribution.rst  diffoptics.inference.RejectionSampling.rst  diffoptics.integrator.BaseIntegrator.rst  diffoptics.integrator.StratifiedSamplingIntegrator.rst  diffoptics.light_sources.BaseLightSource.rst  diffoptics.light_sources.LightSourceFromDistribution.rst  diffoptics.optics.BaseOptics.rst  diffoptics.optics.BoundingSphere.rst  diffoptics.optics.Camera.rst  diffoptics.optics.Lens.rst  diffoptics.optics.Mirror.rst  diffoptics.optics.PSF.rst  diffoptics.optics.Ray.rst  diffoptics.optics.Sensor.rst  diffoptics.optics.Vector.rst  diffoptics.optics.Window.rst  diffoptics.ray_tracing.RayTracing.rst  diffoptics.ray_tracing.Scene.rst  diffoptics.transforms.BaseTransform.rst  diffoptics.transforms.LookAtTransform.rst  diffoptics.transforms.SimpleTransform.rst  distributions.rst  gradoptics.distributions.atom_cloud.rst  gradoptics.distributions.base_distribution.rst  gradoptics.distributions.gaussian_distribution.rst  gradoptics.integrator.stratified_sampling_integrator.rst  gradoptics.light_sources.base_light_source.rst  gradoptics.optics.bounding_sphere.rst  (+19 more)
syc/: readme  (+6 more)
(+204 files in other folders)
