[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradoptics"
version = "0.0.2"
authors = [
  { name="Maxime Vandegar", email="maxime.vandegar@slac.stanford.edu" },
  { name="Michael Kagan", email="makagan@slac.stanford.edu" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/magis-slac/gradoptics"
"Bug Tracker" = "https://github.com/pypa/magis-slac/gradoptics"
